--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,401 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+:root {
+   --color-131921: #131921;
+   --color-3b4149: #3b4149;
+   /* --color-008080: #008080; */
+   --color-33cbfa: #33cbfa;
+   --color-232f3e: #232f3e;
+   --color-febd69: #febd69;
+   --color-bf4800: #bf4800;
+   --color-f5f5f7: #f5f5f7;
+   --color-ededed: #ededed;
+   --color-777777: #777777;
+   --color-1c1c1b: #1c1c1b;
+
+}
+body {
+  font-family: "Rubik", sans-serif;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+.form-control:focus {
+  box-shadow: none;
+  border-color: inherit;
+}
+.space-left-10 {
+  padding-left: 10px;
+}
+.gap-10 {
+  gap: 10px;
+}
+.gap-15 {
+  gap: 15px;
+}
+.gap-30 {
+  gap: 30px;
+}
+.button {
+  background-color: var(--color-232f3e);
+  color: white;
+  font-size: 12px;
+  padding: 5px 20px;
+  border-radius: 25px;
+}
+.button:hover {
+  background-color: var(--color-33cbfa);
+}
+.card-wrapper {
+  background-color: white;
+  box-shadow: 0 0 10px #b2b2b2;
+  padding: 15px;
+}
+.section-heading {
+  font-size: 26px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Header */
+.header-top-strip {
+  background-color: var(--color-131921);
+  border-bottom: 1px solid var(--color-3b4149);
+}
+.header-upper {
+  background-color: var(--color-131921);
+}
+.header-upper .input-group-text {
+  background-color: var(--color-33cbfa);
+}
+.header-upper .header-upper-links img {
+  height: 25px;
+  width: 25px;
+}
+.header-bottom {
+  background-color: var(--color-232f3e);
+}
+.header-bottom .menu-links a, .header-bottom .dropdown .btn {
+  color: white;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  letter-spacing: 0.3;
+  text-transform: uppercase;
+}
+.header-bottom .dropdown button:focus {
+  box-shadow: none ;
+}
+.header-bottom .dropdown-menu {
+  background-color: var(--color-131921);
+  width: 100%;
+  transform: translate3d(0px, 40px, 0px) !important;
+}
+.header-bottom .dropdown-item {
+  padding: 10px;
+  margin-bottom: 3px;
+  border-bottom: 1px solid var(--color-3b4149);
+}
+.header-bottom .dropdown-item:hover {
+  background-color: transparent;
+  color: var(--color-33cbfa) !important;
+}
+/* Home */
+.left-banner-content {
+  top: 15%;
+  left: 5%;
+}
+.left-banner-content h4 {
+  font-size: 15px;
+  font-weight: 900;
+  line-height: 20px;
+  color: var(--color-bf4800);
+  margin: 0 0 12px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+}
+.left-banner-content h5 {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 40px;
+  letter-spacing: -2px;
+  text-transform: uppercase;
+  text-transform: none;
+}
+.left-banner-content p {
+  font-size: 18px;
+  line-height: 28px;
+  color: var(--color-131921);
+  letter-spacing: 0.4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.right-banner-1 {
+  width: 49%;
+}
+.right-banner-1-content {
+  top: 25%;
+  left: 10%;
+}
+.right-banner-1-content h4 {
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 10px;
+  color: var(--color-bf4800);
+  margin: 0 0 5px;
+  letter-spacing: 0.1px;
+  text-transform: uppercase;
+}
+.right-banner-1-content h5 {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-transform: none;
+}
+.right-banner-1-content p {
+  font-size: 12px;
+  line-height: 18px;
+  color: var(--color-131921);
+  letter-spacing: 0.2;
+}
+.right-banner-1-content h6 {
+  color: var(--color-bf4800);
 }
 
-.App-header {
-  min-height: 100vh;
+  /* Home wrapper 2 */
+.home-wrapper-2 {
+  background-color: var(--color-f5f5f7);
+}
+  /* Home wrapper 3 */
+.home-wrapper-3 .categories {
+  background-color: white;
+  box-shadow: 0 0 10px #b2b2b2;
+  padding: 15px;
+}
+.home-wrapper-3 .categories > div {
+  width: 25%;
+  padding: 10px 20px 10px 20px;
+}
+.home-wrapper-3 .categories > div > div {
+  width: 60%;
+}
+.home-wrapper-3 .categories > div:nth-child(1), 
+  .home-wrapper-3 .categories > div:nth-child(2),
+  .home-wrapper-3 .categories > div:nth-child(3),
+  .home-wrapper-3 .categories > div:nth-child(4) {
+    border-bottom: 1px solid var(--color-ededed)
+}
+.home-wrapper-3 .categories > div:nth-child(1), 
+  .home-wrapper-3 .categories > div:nth-child(2),
+  .home-wrapper-3 .categories > div:nth-child(3) {
+    border-right: 1px solid var(--color-ededed)
+}
+.home-wrapper-3 .categories > div:nth-child(5), 
+  .home-wrapper-3 .categories > div:nth-child(6),
+  .home-wrapper-3 .categories > div:nth-child(7) {
+    border-right: 1px solid var(--color-ededed)
+}
+
+  /* Home Blog Card */
+.home-blog-wrapper .blog-card {
+  background-color: white;
+  border-radius: 10px;
+}
+.home-blog-wrapper .blog-card img {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.home-blog-wrapper .blog-content {
+  padding: 15px;
+}
+.blog-content p.date {
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+  padding: 0;
+}
+.blog-content h5 {
+  font-size: 18px;
+  color: var(--color-131921)
+}
+.blog-content p.desc {
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
+
+  /* Home Product Card */
+.product-card {
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  overflow: hidden;
+}
+.product-card:hover .action-bar{
+  right: 10px;
+}
+.product-card .product-details h6 {
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+.product-card .product-details h5 {
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.product-card .product-details p.product-price {
+  font-size: 16px;
+  color: var(--color-1c1c1b);
+}
+.product-card .action-bar {
+  top: 10%;
+  right: -23px;
+  transition: 0.3s;
+}
+.product-card .wishlist-icon {
+  top: 2%;
+  right: 10px;
+}
+.product-card .product-image>img:last-child {
+  display: none;
+}
+.product-card:hover .product-image > img:first-child {
+  display: none;
+}
+.product-card:hover .product-image > img:last-child {
+  display: block;
+}
+
+/* Special Product Card */
+.special-product-card {
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+/* famouse product card */
+.famouse-card .famouse-content {
+  top: 10%;
+  left: 5%;
+}
+.famouse-card img {
+  border-radius: 10px;
+}
+.famouse-content h5 {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: white;
+  text-transform: uppercase;
+}
+.famouse-content h6 {
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+  color: white;
+}
+.famouse-content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 100;
+  color: white;
+}
+
+/* Our Store */
+.filter-card {
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 15px;
+}
+.filter-card .filter-title {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--color-1c1c1b)
+}
+.filter-card ul,
+.filter-card .form-check-label {
+  list-style-type: none;
+  font-size: 13px;
+  line-height: 30px;
+  color: var(--color-777777);
+  cursor: pointer;
+}
+.filter-card .form-check-input:checked {
+  background-color: var(--color-232f3e);
+  border-color: var(--color-232f3e);
+}
+.filter-card .form-check-input:focus {
+  box-shadow: none;
+  border-color: rgba(0, 0, 0, 0.25);
+}
+.filter-card .sub-title {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+.filter-card .filter-color {
+  list-style-type: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.filter-card .filter-color li {
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 50%;
+}
+.filter-card .random-products h5 {
+  font-size: 13px;
+  margin-bottom: 5px;
+}
+.filter-card .random-products:first-child {
+  border-bottom: 1px solid var(--color-ededed);
+}
+.grid-wrapper .grid img {
+  height: 30px;
+  width: 30px;
+  background-color: #f2f2f2;
+  padding: 5px;
+  border-radius: 3px;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
-}
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Contact */
+
+/* Footer */
+footer {
+  background-color: var(--color-232f3e);
+  color: white;
+}
+footer:not(:first-child) {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer .input-group-text {
+  background-color: var(--color-33cbfa);
+  color: white;
 }
