--- a/src/App.css
+++ b/src/App.css
@@ -345,13 +345,13 @@ a {
   margin-bottom: 15px;
   margin-top: 20px;
 }
-.filter-card .filter-color {
+.filter-color {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
-.filter-card .filter-color li {
+.filter-color li {
   width: 20px;
   height: 20px;
   background-color: red;
@@ -441,13 +441,39 @@ a {
   color: var(--color-777777);
 }
 
-
-
-
-
-
-
-
+/* Compare Products */
+.compare-product-card, .wishlist-card {
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+}
+.compare-product-card .close-img, .wishlist-card .close-img {
+  top: 10px;
+  right: 10px;
+  width: 20px;
+  padding: 4px;
+  cursor: pointer;
+}
+.compare-product-details h5.title,
+.wishlist-card h5.title {
+  font-size: 15px;
+  line-height: 22px;  
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+}
+.compare-product-details h6.price,
+.wishlist-card h6.price {
+  font-size: 15px;
+  line-height: 22px;  
+  font-weight: 400;
+}
+.compare-product-card .product-detail {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1px 0px;
+  border-top: #ffffff;
+}
 
 /* Footer */
 footer {
