--- a/src/App.css
+++ b/src/App.css
@@ -475,6 +475,47 @@ a {
   border-top: #ffffff;
 }
 
+/* Authentication Page */
+.auth-card {
+  padding: 20px;
+  background-color: white;
+  width: 500px;
+  margin: 30px auto;
+  border-radius: 10px;
+}
+.auth-card h3 {
+  font-size: 19px;
+  font-weight: 500;
+  color: var(--color-777777)
+}
+.auth-card p {
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--color-777777)
+}
+.auth-card .form-control {
+height: 35px;
+background-color: var(--color-f5f5f7);
+color: var(--color-777777);
+font-size: 15px;
+border-radius: 10px;
+border-color: transparent;
+}
+.auth-card a {
+  font-size: 15px;
+  font-weight: 400;
+  color: var(--color-1c1c1b)
+}
+.auth-card .signup {
+  background-color: var(--color-33cbfa);
+  color: white;
+}
+.auth-card .signup:hover {
+  background-color: var(--color-131921);
+  color: white;
+}
+
+
 /* Footer */
 footer {
   background-color: var(--color-232f3e);
