single blog page added

--- a/src/App.css
+++ b/src/App.css
@@ -515,6 +515,21 @@ border-color: transparent;
   color: white;
 }
 
+/* Single Blog Page */
+.single-blog-card h3 {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--color-777777);
+}
+.single-blog-card p {
+  font-size: 14px;
+  color: var(--color-777777);
+}
+.single-blog-card a {
+  font-size: 15px;
+  color: var(--color-777777);
+  margin-bottom: 20px;
+}
 
 /* Footer */
 footer {
