--- a/src/App.css
+++ b/src/App.css
@@ -497,25 +497,27 @@ a {
   color: var(--color-777777)
 }
 .auth-card .form-control {
-height: 35px;
-background-color: var(--color-f5f5f7);
-color: var(--color-777777);
-font-size: 15px;
-border-radius: 10px;
-border-color: transparent;
+  height: 35px;
+  background-color: var(--color-f5f5f7);
+  color: var(--color-777777);
+  font-size: 15px;
+  border-radius: 10px;
+  border-color: transparent;
 }
 .auth-card a {
   font-size: 15px;
   font-weight: 400;
   color: var(--color-1c1c1b)
 }
-.auth-card .signup {
+.signup {
   background-color: var(--color-33cbfa);
   color: white;
+  border: none;
 }
-.auth-card .signup:hover {
+.signup:hover {
   background-color: var(--color-131921);
   color: white;
+  border: none;
 }
 
 /* Single Blog Page */
@@ -540,6 +542,16 @@ border-color: transparent;
   padding: 30px;
 }
 
+.description-wrapper h4 {
+  font-size: 24px;
+  color: var(--color-1c1c1b);
+}
+.description-wrapper h4 {
+  
+}
+
+
+
 /* Single Product page */
 .review-inner-wrapper {
   background-color: white;
@@ -551,27 +563,32 @@ border-color: transparent;
   border-radius: 10px;
 }
 .single-product-image > div {
-  width: 50%;
+  width: 100%;
 }
 .single-product-image img {
   width: 100% !important;
-  height: 350px !important;
   object-fit: cover;
 }
 .single-product-image > div {
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
 .single-product-image .js-image-zoom__zoomed-image {
-  left: 230px !important;
+  left: 130px !important;
   padding: 20px;
   background-color: white;
   border-radius: 10px;
+  z-index: 1000;
 }
 .single-product-details {
   padding: 20px;
   border-radius: 10px;
 }
-
+.single-product-details h3.title {
+  font-size: 20px;
+  font-weight: 500;
+  color: var(--color-1c1c1b);
+  margin-bottom: 16px;
+}
 
 .product-related-images {
   background-color: white;
@@ -579,12 +596,32 @@ border-color: transparent;
 }
 .product-related-images > div {
   padding: 20px;
-  width: 40%;
+  width: 47%;
   border: 1px solid rgba(0, 0, 0, 0.25);
 }
 .product-related-images img {
   width: 100% !important;
   height: 100% !important;
+}
+
+/** single product description **/
+.single-product-details a.review-btn, .text-review {
+  font-size: 13px;
+  color: var(--color-777777)
+}
+.single-product-details .product-heading {
+  font-size: 14px;
+  color: var(--color-1c1c1b);
+  margin-bottom: 0px;
+}
+.single-product-details .product-data {
+  font-size: 13px;
+  color: var(--color-777777);
+  margin-bottom: 0px;
+}
+.single-product-details a{
+  font-size: 15px;
+  color: var(--color-777777)
 }
 
 .description-wrapper h4,
